--- a/SecretBase/manifest.json
+++ b/SecretBase/manifest.json
@@ -1,10 +1,15 @@
 ﻿{
-  "Name": "SecretBase",
-  "Author": "ModAuthor",
-  "Version": "1.0.0",
-  "Description": "Mod Template",
-  "UniqueID": "ModAuthor.SecretBase",
-  "EntryDll": "SecretBase.dll",
-  "MinimumApiVersion": "2.11",
-  "UpdateKeys": [ "Nexus:" ]
+    "Name": "Secret Base",
+    "Author": "blueberry",
+    "Version": "1.0.0",
+    "Description": "Secret bases scattered around the overworld of Stardew Valley",
+    "UniqueID": "blueberry.SecretBase",
+    "EntryDll": "SecretBase.dll",
+    "MinimumApiVersion": "2.11",
+    "UpdateKeys": [ "Nexus:5305" ],
+    "Dependencies": [
+        {
+            "UniqueID": "blueberry.SecretBase.Locations"
+        }
+    ]
 }
