Associating tools with secret base themes Sequenced secret base entry activation routine More method documentation

--- a/SecretBase/SecretBase.csproj
+++ b/SecretBase/SecretBase.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Core\MultipleDialogueQuestion.cs" />
     <Compile Include="Core\Log.cs" />
     <Compile Include="Core\ModEntry.cs" />
-    <Compile Include="Core\ModData.cs" />
+    <Compile Include="Core\ModState.cs" />
     <Compile Include="Editors\WorldEditor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
