Multiple - major additions:
Updated project to SDK format.
Now uses the split outdoors tilesheet rather than the stuff tilesheet.
Const is now ModConsts.
Mod core members are immutable.
Replaced hotkeys with console commands.
Added a ModMessage setup for a Secret Mailbox to deliver entry requests to and from owners and guests to Secret Bases.
Included a clickable HUD icon for new notifications in the Secret Mailbox.
Guests in a Secret Base now have inputs suppressed.
Started off having config-swappable Secret Base position and location distributions for map edit compatibility with some stubs, but still no full implementation.
DoesAnyoneOwnSecretBase now gives you the owner's UID.
Added interactions and implementations for Hole objects; obstructive map tiles in a Secret Base that can be fixed under certain requirements.
Restructured CanFarmerHaveSecretBase to return out-of-the-box the actual state of the Secret Base as well as whether the farmer is able to own it. Interactions are still mostly in SecretBaseEntryDialogue.
Tidied up the different dialogue styles into Create...Dialogue methods.
Added a couple more debug methods for Global Storage and Secret Mailbox.

--- a/SecretBase/manifest.json
+++ b/SecretBase/manifest.json
@@ -1,15 +1,15 @@
 ﻿{
-    "Name": "Secret Base",
-    "Author": "blueberry",
-    "Version": "1.0.0",
-    "Description": "Secret bases scattered around the overworld of Stardew Valley",
-    "UniqueID": "blueberry.SecretBase",
-    "EntryDll": "SecretBase.dll",
-    "MinimumApiVersion": "2.11",
-    "UpdateKeys": [ "Nexus:5305" ],
-    "Dependencies": [
-        {
-            "UniqueID": "blueberry.SecretBase.Locations"
-        }
-    ]
+  "Name": "Secret Base",
+  "Author": "blueberry",
+  "Version": "1.0.0",
+  "Description": "Secret bases scattered around the overworld of Stardew Valley",
+  "UniqueID": "blueberry.SecretBase",
+  "EntryDll": "SecretBase.dll",
+  "MinimumApiVersion": "2.11",
+  "UpdateKeys": [ "Nexus:5305" ],
+  "Dependencies": [
+    {
+      "UniqueID": "Platonymous.Toolkit"
+    }
+  ]
 }
