--- a/[TMX] SecretBase_Locations/[TMX] SecretBase_Locations.csproj
+++ b/[TMX] SecretBase_Locations/[TMX] SecretBase_Locations.csproj
@@ -12,6 +12,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="assets\*.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\*.tmx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\z_*.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="3.0.0" />
   </ItemGroup>
 
